Added Graph ADT.

--- a/DataStructures/DataStructures/DataStructures.csproj
+++ b/DataStructures/DataStructures/DataStructures.csproj
@@ -46,6 +46,7 @@
     <Compile Include="Dictionary\HashDictionary.cs" />
     <Compile Include="Dictionary\IDictionary.cs" />
     <Compile Include="Dictionary\LinkedListDictionary.cs" />
+    <Compile Include="Graph\Graph.cs" />
     <Compile Include="LinkedList\ILinkedList.cs" />
     <Compile Include="LinkedList\LinkedList.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
