--- a/DataStructures/DataStructuresUnitTests/DataStructuresUnitTests.csproj
+++ b/DataStructures/DataStructuresUnitTests/DataStructuresUnitTests.csproj
@@ -60,6 +60,7 @@
     <Compile Include="LinkedListTest.cs" />
     <Compile Include="PerformanceTests\SplayTreePerfTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="StackTest.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\DataStructures\DataStructures.csproj">
